[package]
name = "kakao"
version = "0.1.0"
authors = ["adamnemecek <adamnemecek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cocoa-foundation = "0.1"
block = "0.1.5"
foreign-types = "0.3"

[dependencies.objc]
version = "0.2.4"
features = ["objc_exception"]